Fixed overlap by adding 40px padding to the top of the body in  my main.css

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,6 +1,7 @@
 body{
     background-image: url('../assets/pw_maze_white.png');
     color: #36393D;
+    padding-top: 40px;
 }
 #banner{
     width: 100%;
